# on-service-challenge

./: README.md  pyproject.toml
app/src/on_service/: configuration.py  main.py
app/src/on_service/application/factories/: __init__.py  journey_creator_factory.py
app/src/on_service/application/use_cases/: __init__.py  journey_creator.py
app/src/on_service/domain/: models.py
app/src/on_service/domain/filter/: __init__.py  filter_factory.py  path_filter.py
app/src/on_service/domain/services/: __init__.py  flight_events_provider.py  path_finder.py
app/src/on_service/infrastructure/: api_client.py
app/src/on_service/infrastructure/external_services/: __init__.py  apidog_flight_events_provider.py
app/src/on_service/interfaces/api/: dependencies.py
app/src/on_service/interfaces/api/v1/: journey.py  schemas.py
app/src/on_service/interfaces/api/v1/endpoints/: journey.py
app/test/application/use_cases/: test_journey_creator.py
app/test/domain/filter/: data.py  test_filters.py
app/test/domain/services/: data.py  test_path_finder.py
app/test/interfaces/api/v1/endpoints/: data.py  test_journeys_endpoint.py
configuration/: .env.template
docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml
